Update project theo spring security